# dravida-kavacham

./: .gitignore  Architecture.md  Makefile  README.md  Readme.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  release.yml  test-release.yml
docs/: Architecture.md  data.md
dravida_kavacham/: predictor.py
kavacham/: __init__.py  model.py  predictor.py  utils.py
model/: __init__.py  abusive_comment_classifier.py  abusive_comment_classifier_openai.py
notebooks/: data_exploration.ipynb  data_exploration_stats.txt
scripts/: evaluate.py  infer.py  save_embeddings.py  train.py  utils.py
submissions/0/: Incepto_Malayalam.csv  Incepto_Tamil.csv
submissions/1/: submission_with_predictions_ma_base.csv  submission_with_predictions_ta_base.csv
tammalkavacham/: predictor.py
