[tool.poetry]
name = "tammalkavacham"
version = "0.1.1"
description = "Abusive Content Detection for Tamil and Malayalam"
authors = ["Luxshan2000 <Luxshanlux2000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.5.1", optional = true}
transformers = "4.44.2"

[tool.poetry.extras]
cpu = ["torch"]
gpu = ["torch-cuda"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
