[tool.poetry]
name = "kavacham"
version = "0.1.9"
description = "Abusive Content Detection"
authors = ["Luxshan2000 <Luxshanlux2000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.2.0", optional = true}
transformers = "^4.44.2"
gdown = "^5.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = ".git,__pycache__,docs,.venv,dist"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
